# gen_ai_blocks

./: README.md  pyproject.toml  requirements.txt
src/gen_ai_blocks/: completion.py  converser.py  prompt.py  utility.py
